# Battleship

./: CMakeLists.txt
include/: Computer.h  GameInterface.h  GameLogic.h  Greedy.h  Grid.h  GridInterface.h  Human.h  MultipleFunnel.h  Player.h  PlayerInterface.h  Random.h  Ship.h  SingleFunnel.h  Square.h  Strategy.h
src/: Computer.cpp  GameInterface.cpp  GameLogic.cpp  Greedy.cpp  Grid.cpp  GridInterface.cpp  Human.cpp  MultipleFunnel.cpp  Player.cpp  PlayerInterface.cpp  Random.cpp  Ship.cpp  SingleFunnel.cpp  Square.cpp  main.cpp
test/: Test.cpp  config.cpp
